feat: T4 template for generating BitMask with an arbitrary number of fields

--- a/BitMask/BitMasks/BitMasks.csproj
+++ b/BitMask/BitMasks/BitMasks.csproj
@@ -42,8 +42,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BitMask.cs" />
+    <Compile Include="BitMask.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BitMask.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="BitMask.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>BitMask.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
